--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "engines": {
     "node": ">=18.0.0"
   },
-
   "scripts": {
+  
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -16,9 +16,14 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "firebase": "^12.0.0",
+    "mysql2": "^3.14.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
