--- a/back/package.json
+++ b/back/package.json
@@ -8,12 +8,20 @@
     "dev": "node server/index.cjs"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "bcrypt": "^5.1.1"
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
+    "mysql2": "^3.14.3"
   },
-  "keywords": ["backend", "express", "mysql"],
+  "keywords": [
+    "backend",
+    "express",
+    "mysql"
+  ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
