--- a/back/package.json
+++ b/back/package.json
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
-    "mysql2": "^3.14.3"
+    "mysql2": "^3.14.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "keywords": [
     "backend",
