기능: GitHub Codespaces에서 MySQL 지원 추가
- Docker Compose로 MySQL 컨테이너 자동 실행
- Codespaces 환경 자동 감지 및 설정
- 환경 변수 기반 데이터베이스 연결 설정
- 기존 로컬 개발 환경과 호환성 유지
- MySQL 포함된 완전한 개발 환경 구성

주요 변경사항:
- .devcontainer/docker-compose.yml: MySQL 8.0 컨테이너 설정
- .devcontainer/devcontainer.json: Docker Compose 기반 환경 설정
- .devcontainer/setup.sh: 자동 환경 설정 스크립트
- back/server/index.cjs: 환경 변수 기반 DB 연결
- start-dev.sh: Codespaces 지원 강화

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,8 @@
 {
-  "name": "Plainedu Development Environment",
-  "image": "mcr.microsoft.com/devcontainers/javascript-node:16",
+  "name": "Plainedu Development Environment with MySQL",
+  "dockerComposeFile": "docker-compose.yml",
+  "service": "app",
+  "workspaceFolder": "/workspaces/Plainedu",
   
   "features": {
     "ghcr.io/devcontainers/features/node:1": {
@@ -13,35 +15,42 @@
     "vscode": {
       "extensions": [
         "ms-vscode.vscode-json",
-        "bradlc.vscode-tailwindcss",
+        "bradlc.vscode-tailwindcss", 
         "esbenp.prettier-vscode",
         "ms-vscode.vscode-typescript-next",
         "formulahendry.auto-rename-tag",
-        "christian-kohler.path-intellisense"
+        "christian-kohler.path-intellisense",
+        "ms-vscode.hexeditor"
       ],
       "settings": {
-        "terminal.integrated.defaultProfile.linux": "bash"
+        "terminal.integrated.defaultProfile.linux": "bash",
+        "editor.formatOnSave": true
       }
     }
   },
 
-  "forwardPorts": [3000, 4000, 5173],
+  "forwardPorts": [3000, 4000, 5173, 3306],
   "portsAttributes": {
     "3000": {
-      "label": "Frontend Dev Server",
+      "label": "Frontend (Alternative)",
       "onAutoForward": "notify"
     },
     "4000": {
-      "label": "Backend API Server",
+      "label": "Backend API",
       "onAutoForward": "notify"
     },
     "5173": {
-      "label": "Vite Dev Server",
+      "label": "Vite Dev Server", 
       "onAutoForward": "notify"
+    },
+    "3306": {
+      "label": "MySQL Database",
+      "onAutoForward": "ignore"
     }
   },
 
-  "postCreateCommand": "npm install --prefix ./back && npm install --prefix ./front",
+  "postCreateCommand": "bash .devcontainer/setup.sh",
+  "postStartCommand": "echo '🚀 PlainEdu Codespace with MySQL is ready! Use: ./start-dev.sh'",
   
-  "remoteUser": "node"
+  "remoteUser": "vscode"
 }
