Codespace MySQL 연결 개선 및 Swagger 문서 스타일 향상

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,6 +29,13 @@
     }
   },
 
+  "containerEnv": {
+    "DB_HOST": "localhost",
+    "DB_USER": "root",
+    "DB_PASSWORD": "plain",
+    "DB_NAME": "plaindb"
+  },
+
   "forwardPorts": [3000, 4000, 5173, 3306],
   "portsAttributes": {
     "3000": {
